######## 2016-04-01 ########
alter table suplychain_flashsale_orderlist add column supplier_id int(11) default null references supplychain_supply_supplier(id);
alter table suplychain_flashsale_orderlist add column buyer_id int(11) default 0 references auth_user(id);
alter table suplychain_flashsale_orderlist add column created_by smallint default 1;
alter table suplychain_flashsale_orderlist add column last_pay_date date default null;

update suplychain_flashsale_orderlist set buyer_id = null;
alter table suplychain_flashsale_orderlist modify buyer_id int(11) default null;

########2016-03-30####################################
alter table flashsale_cushops_detail add column offshelf_time datetime;
CREATE INDEX `flashsale_cushops_detail_3229bd6f` ON `flashsale_cushops_detail` (`offshelf_time`);

########2016-03-28###################################
alter table flashsale_cushops_detail add column pro_category int(11) default 0;
CREATE INDEX `flashsale_cushops_detail_3f48b25d` ON `flashsale_cushops_detail` (`pro_category`);

alter table flashsale_cushops_detail add column customer int(11);
CREATE INDEX `flashsale_cushops_detail_8b2d9fbd` ON `flashsale_cushops_detail` (`customer`);

########2016-03-25##################################
alter table flashsale_cushops_detail add column name varchar(64);
CREATE INDEX `flashsale_cushops_detail_52094d6e` ON `flashsale_cushops_detail` (`name`);

alter table flashsale_cushops_detail add column pic_path varchar(256);

alter table flashsale_cushops_detail add column std_sale_price double default 0.0;
alter table flashsale_cushops_detail add column agent_price double default 0.0;
alter table flashsale_cushops_detail add column remain_num int(11) default 0;

alter table flashsale_cushops_detail add column carry_amount double default 0.0;
alter table flashsale_cushops_detail add column carry_scheme int(11) default 0;
alter table flashsale_cushops_detail add column position int(11) default 0;
